<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="cat.detemporada.activities.AfegirEditarReceptaActivity">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_margin="@dimen/marge_gran">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true">
            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/recepta_imatge"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/boto_afegir_imatge"
                android:layout_marginBottom="@dimen/marge_gran"/>
            <EditText
                android:id="@+id/recepta_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nom de la recepta..."
                android:layout_below="@id/recepta_imatge"/>

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/recepta_star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_empty"
                android:background="?android:selectableItemBackground"
                android:layout_below="@id/recepta_nom"
                android:layout_alignParentStart="true"/>

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/recepta_star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_empty"
                android:background="?android:selectableItemBackground"
                android:layout_below="@id/recepta_nom"
                android:layout_toEndOf="@id/recepta_star1"/>

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/recepta_star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_empty"
                android:background="?android:selectableItemBackground"
                android:layout_below="@id/recepta_nom"
                android:layout_toEndOf="@id/recepta_star2"/>

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/recepta_star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_empty"
                android:background="?android:selectableItemBackground"
                android:layout_below="@id/recepta_nom"
                android:layout_toEndOf="@id/recepta_star3"/>

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/recepta_star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_empty"
                android:background="?android:selectableItemBackground"
                android:layout_below="@id/recepta_nom"
                android:layout_toEndOf="@id/recepta_star4"/>

            <EditText
                android:id="@+id/recepta_temps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recepta_nom"
                android:layout_toStartOf="@id/recepta_persones"
                android:layout_marginEnd="5dp"
                android:drawableStart="@drawable/ic_temps"
                android:hint="30"
                android:inputType="number"/>
            <EditText
                android:id="@+id/recepta_persones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_persones"
                android:hint="4"
                android:layout_below="@id/recepta_nom"
                android:layout_alignParentEnd="true"
                android:inputType="number"
                />
            <TextView
                android:id="@+id/recepta_dificultat_titol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/dificultat"
                android:gravity="center"
                android:layout_alignBaseline="@id/recepta_dificultat"
                android:layout_alignParentStart="true"
                />
            <Spinner
                android:id="@+id/recepta_dificultat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:layout_below="@id/recepta_star1"
                android:layout_toEndOf="@id/recepta_dificultat_titol"
                />
            <TextView
                android:id="@+id/recepta_categoria_titol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/categoria"
                android:gravity="center"
                android:layout_alignBaseline="@id/recepta_categoria"
                android:layout_alignParentStart="true"
                />
            <Spinner
                android:id="@+id/recepta_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marge_mitja"
                android:layout_marginStart="@dimen/marge_petit"
                android:gravity="center"
                android:layout_below="@id/recepta_dificultat_titol"
                android:layout_toEndOf="@id/recepta_categoria_titol"
                />
            <TextView
                android:id="@+id/recepta_descripcio_titol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/marge_mitja"
                android:text="@string/descripcio"
                android:gravity="center"
                android:layout_below="@id/recepta_categoria_titol"
                android:layout_alignParentStart="true"
                />
            <EditText
                android:id="@+id/recepta_descripcio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marge_petit"
                android:inputType="textMultiLine"
                android:lines="3"
                android:layout_below="@id/recepta_descripcio_titol"
                android:layout_alignParentStart="true" />

            <android.support.v7.widget.CardView
                android:id="@+id/recepta_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marge_gran"
                android:layout_below="@id/recepta_descripcio"
                android:layout_alignParentStart="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/recepta_ingredients_titol"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_fletxa_obert"
                        android:layout_margin="10dp"
                        android:textStyle="bold"
                        android:text="@string/ingredients"
                        android:gravity="center|start"
                        />
                    <FrameLayout
                        android:id="@+id/frame_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/boto_afegir_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/afegeix_ingredient"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/recepta_instruccions_titol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marge_gran"
                android:textStyle="bold"
                android:text="@string/preparacio"
                android:gravity="center|start"
                android:layout_below="@id/recepta_ingredients"/>
            <FrameLayout
                android:id="@+id/frame_instruccions"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/recepta_instruccions_titol"/>
            <Button
                android:id="@+id/boto_afegir_pas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/frame_instruccions"
                android:text="@string/afegeix_pas"/>
            <Button
                android:id="@+id/boto_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/boto_afegir_pas"
                android:text="@string/guardar_recepta"
                android:layout_marginTop="@dimen/marge_gran"/>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
