<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="cat.detemporada.activities.ProducteActivity">

    <include layout="@layout/collapsing_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_margin="@dimen/marge_gran">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/producte_descripcio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/producte_titol_temporada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/marge_gran"
                android:text="@string/temporada"/>

            <TextView
                android:id="@+id/producte_temporada_tot_lany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marge_mitja"
                android:text="@string/temporada_tot_lany"
                android:visibility="gone"/>

            <TableLayout
                android:id="@+id/producte_temporada"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/marge_gran"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:gravity="center"
                        android:text="G"
                        android:background="@drawable/mes_fora_temporada"
                        android:textStyle="bold"/>
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@drawable/mes_fora_temporada"
                        android:text="F" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@drawable/mes_fora_temporada"
                        android:text="M" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@drawable/mes_fora_temporada"
                        android:text="A" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@drawable/mes_fora_temporada"
                        android:text="M" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@drawable/mes_fora_temporada"
                        android:text="J" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@drawable/mes_fora_temporada"
                        android:text="J" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@drawable/mes_fora_temporada"
                        android:text="A" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@drawable/mes_fora_temporada"
                        android:text="S" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@drawable/mes_fora_temporada"
                        android:text="O" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@drawable/mes_fora_temporada"
                        android:text="N" />
                    <TextView
                        android:gravity="center"
                        android:textStyle="bold"
                        android:background="@drawable/mes_fora_temporada"
                        android:text="D" />
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/producte_titol_receptes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/marge_gran"
                android:text="@string/receptes"/>

            <FrameLayout
                android:id="@+id/frame_receptes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
